connect to aylien

--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,5 +1,5 @@
-header {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 40px;
+header h1 {
+    font-size: 36px;
+    text-align: center;
+    font-family: 'Bebas Neue', cursive;
 }
