--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,14 +1,27 @@
 body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-main {
-    flex: 2;
+    font-family: 'Abel', sans-serif;
 }
 
 section {
-    max-width: 800px;
     margin: 50px auto;
 }
+
+.hide {
+    display: none;
+}
+
+.wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 92vh;
+}
+
+.results {
+    font-family: 'Abel', sans-serif;
+}
+
+
+// font-family: 'Abel', sans-serif;
+// font-family: 'Bebas Neue', cursive;
